Реализована вся основная логика, добавлены тесты. Требуется отладка.